--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "private": true,
   "dependencies": {
     "@types/axios": "^0.14.0",
+    "@types/file-saver": "^1.3.0",
     "axios": "^0.18.0",
+    "file-saver": "^1.3.8",
     "react": "^16.5.0",
     "react-dom": "^16.5.0",
     "react-scripts-ts": "2.17.0",
